styling for latest, need to fix spacing

--- a/src/components/pages/Blog/blogStyle.css
+++ b/src/components/pages/Blog/blogStyle.css
@@ -6,11 +6,13 @@
 }
 
 .latestPostCard {
-    border-radius: .25rem !important;
+    border-radius: 1rem !important;
+    background-color: black;
+    /* border: solid 2px lightgray; */
 }
 
 #latestImg {
-  border-radius: 0.25rem 0 0 0.25rem;
+  border-radius: 1rem 0 0 1rem;
 }
 
 .blogBtn {
@@ -55,5 +57,12 @@
   background-color: white;
   opacity: 0.9;
   margin: 20rem 2rem 1rem 2rem ;
+  border-radius: 1rem;
+}
+
+.textWhiteHoverLatest {
+  background-color: white;
+  opacity: 0.9;
+  margin: 2rem ;
   border-radius: 1rem;
 }
